theme.css
/* ... */
.markdown-source-view .cm-contentContainer {
  padding: 1rem 2rem;
}
.is-phone .markdown-source-view .cm-contentContainer {
  padding-top: 0;
  padding-bottom: 0;
}
.markdown-reading-view .mod-footer {
  margin: 1em 0 0 0;
}
.markdown-reading-view .markdown-rendered {
  padding: 0;
}

.markdown-source-view.mod-cm6.is-readable-line-width
  .cm-sizer
  .cm-contentContainer,
.markdown-preview-view.is-readable-line-width
  .markdown-preview-sizer
  > div:not(.mod-header):not(.mod-footer):not(.markdown-preview-pusher) {
  margin: 0 auto;
  max-width: var(--file-line-width);
  padding-left: 2rem;
  padding-right: 2rem;
  width: 100%;
}
.markdown-rendered .mod-header {
  margin-bottom: 3rem;
}
.is-phone .markdown-rendered .mod-header {
  margin-bottom: 0;
}
/* Override inline styles */
.cm-content {
  /* Live Preview */
  padding-bottom: 0 !important;
}
.markdown-preview-sizer {
  /* Reading Mode */
  padding-bottom: 0 !important;
}

/* Order in content area */
.inline-title {
  order: 0;
}
.mod-root .metadata-container,
.setting-properties-position-above
  .mod-root
  .is-live-preview
  .metadata-container {
  order: 1;
}
.setting-properties-position-below
  .mod-root
  .is-live-preview
  .metadata-container {
  margin-top: 1em;
  order: 3;
}
.setting-properties-position-below
  .mod-root
  .is-live-preview
  .embedded-backlinks {
  padding: 0 2rem 0.5rem 2rem;
}
body:not(.setting-properties-position-below)
  .mod-root
  .is-live-preview
  .embedded-backlinks {
  margin-top: 1em;
}
.cm-contentContainer {
  order: 2;
}
.embedded-backlinks {
  order: 3;
}

/* Consistent styles for inline metadata sections */
.mod-root .metadata-container,
.embedded-backlinks {
  animation: 0.5s 1 alternate fadein;
  background: var(--metadata-property-background);
  border-radius: 0;
  border: 0;
  font-family: var(--font-interface);
  margin: 0;
  padding: 0.5rem 2rem;
  transform: none;
  width: 100%;
}
body:not(.is-mobile) .mod-root .markdown-reading-view .metadata-container {
  width: calc(100% + 4rem);
  margin: 0;
}

/* Tab content header */
.view-header {
  height: auto; /* Don't use --header-height */
  justify-content: space-between;
  padding: 0.5em;
}

/* Inline title (i.e. filename) */
.inline-title {
  width: 100%;
  margin: 0 auto;
  max-width: var(--file-line-width);
  padding: 0 2rem;
  text-align: center;
}
.view-header-title-container {
  display: none;
}
.show-inline-title .view-header-title-container {
  display: flex;
}
.view-header-title {
  display: none;
}
.show-inline-title.is-focused .workspace-leaf.mod-active .view-header-title {
  /* Use the "Display Inline Title" setting to show/hide the title in the header. */
  display: block;
}

@media (hover: hover) {
  .view-header-title-parent .view-header-breadcrumb:hover {
    background: transparent;
    cursor: auto;
  }
}
/* #endregion */
/* #region Properties */
.workspace > .workspace-split:not(.mod-root) .metadata-container {
  --metadata-divider-width: inherit;
}
.setting-properties-position-below
  .mod-root
  .is-live-preview
  .metadata-container {
  padding: 0.5em 2em 0 2em;
}
.setting-properties-position-below
  .mod-root
  .is-live-preview
  .metadata-container:has(~ .embedded-backlinks[style*="display: none"]) {
  padding-bottom: 0.5em;
}
.view-content .metadata-properties-heading .collapse-indicator svg.svg-icon,
.view-content
  .metadata-properties-heading
  .is-collapsed
  .collapse-indicator
  svg.svg-icon {
  color: var(--theme-color-control);
}
.metadata-properties-title {
  font-size: var(--font-ui-smaller);
  color: var(--text-faint);
  font-weight: var(--font-semibold);
  padding: 0;
  user-select: none;
}
.metadata-property {
  background-color: transparent;
  border: none;
  box-shadow: none;
  display: flex;
  gap: 0.5em;
  padding: var(--input-border-width);

  .metadata-property-key {
    align-items: flex-start;
    display: flex;
    gap: 0.5em;
  }
}
.metadata-property:focus-within {
  background: var(--metadata-property-background-hover);
  border-color: var(--metadata-property-background-hover);
  box-shadow: none;
}
@media (hover: hover) {
  .metadata-property:hover {
    box-shadow: none;
  }
}
.metadata-property .metadata-property-key:focus-within {
  background: transparent;
}
.metadata-property input.metadata-property-key-input {
  height: var(--input-height);
  color: var(--theme-color-control);
}
.metadata-property .multi-select-input {
  padding: var(--pill-padding-y) 0;
}
.metadata-property-icon:before {
  display: none;
}
/* #endregion */
/* #region File lists */

/* Styles used by both Files and Recent Files */

.nav-file-title {
  justify-content: space-between;
  padding: 0;
}
.nav-file-title-content,
.nav-folder-title-content {
  flex-grow: 1;
  padding: var(--nav-item-padding);
}
.nav-file-tag {
  background: transparent;
  border: solid 1px var(--nav-file-tag-border-color);
  color: var(--theme-color-navFileTag);
}
.nav-file-title.is-active .nav-file-tag {
  color: var(--theme-color-navFileTagActive);
  border-color: var(--theme-color-navFileTagActiveBorder);
}
@media (hover: hover) {
  /* No hover effect for vault title, as clicking doesn't do anything */
  .nav-folder.mod-root > .nav-folder-title:hover {
    color: inherit;
  }
}
/* #endregion */
/* #region Document search */
.document-search-container,
.mod-active .document-search-container,
.is-mobile .document-search-container,
.kanban-plugin__search-wrapper {
  animation: 0.5s 1 alternate fadein;
  background: var(--theme-color-controlSetBg);
  border: none;
  border-radius: var(--radius-l);
  box-shadow: var(--shadow-s);
  gap: 0.5em;
  margin: 0 auto;
  padding: 0.5em;
  width: auto;
}
.document-search,
.document-replace {
  gap: 0.5em;
  padding: 0;
}
.document-search-button {
  border: none;
  color: var(--theme-color-control);
}
.document-search-close-button,
.is-mobile .document-search .document-search-close-button,
.is-mobile .document-replace .document-search-close-button {
  top: calc(50% - 0.5em);
}
/* ... */

